--- a/WebContent/main_page.ejs
+++ b/WebContent/main_page.ejs
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="css/main-page.css?version=1">
+    <link rel="stylesheet" href="css/app.css?version=1">
 </head>
     
-<body class="d-flex text-center text-white bg-dark">
+<body class="d-flex text-center text-white bg-dark" style='background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+		url("https://source.unsplash.com/dOOGrK3zcUc");'>
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
