--- a/WebContent/home.ejs
+++ b/WebContent/home.ejs
@@ -19,10 +19,10 @@
                 <h3 class="float-md-left mb-0">BUAir</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="index.jsp">Book Tickets</a>
-                    <a class="nav-link" href="index1.jsp">Cancel Ticket</a>
-                    <a class="nav-link" href="index2.jsp">My Bookings</a>
-                    <a class="nav-link" href="index3.jsp">Admin Login</a>
+                    <a class="nav-link" href="search_flight.jsp">Book Tickets</a>
+                    <a class="nav-link" href="cancel.jsp">Cancel Ticket</a>
+                    <a class="nav-link" href="display_booking.jsp">My Bookings</a>
+                    <a class="nav-link" href="adminlogin.jsp">Admin Login</a>
                 </nav>
             </div>
         </header>
